[gd_scene load_steps=3 format=3 uid="uid://dy3h02ugaryvy"]

[ext_resource type="Script" uid="uid://5uoln5qyl8vd" path="res://whiteboard.gd" id="1_ihy0m"]
[ext_resource type="Script" uid="uid://w2kfhicttjbn" path="res://dock.gd" id="2_tyhvn"]

[node name="CanvasLayer" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_ihy0m")

[node name="Dock" type="HBoxContainer" parent="." node_paths=PackedStringArray("canvas")]
z_index = 10
custom_minimum_size = Vector2(500, 100)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
script = ExtResource("2_tyhvn")
canvas = NodePath("..")

[node name="RedButton" type="Button" parent="Dock"]
layout_mode = 2
size_flags_horizontal = 3
text = "red"

[node name="BlueButton" type="Button" parent="Dock"]
layout_mode = 2
size_flags_horizontal = 3
text = "blue"

[node name="GreenButton" type="Button" parent="Dock"]
layout_mode = 2
size_flags_horizontal = 3
text = "green"

[node name="WhiteButton" type="Button" parent="Dock"]
layout_mode = 2
size_flags_horizontal = 3
text = "white"

[node name="ColorRect" type="ColorRect" parent="Dock"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_bottom = -40.0
grow_vertical = 0
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_top = 17.0
offset_right = 413.0
offset_bottom = 40.0
bbcode_enabled = true
text = "Esc: [i]Close[/i]     C: [i]Clear[/i]     Enter: [i]Fullscreen[/i]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[connection signal="change_colour" from="." to="." method="_on_change_colour"]
[connection signal="pressed" from="Dock/RedButton" to="Dock" method="_on_red_button_pressed"]
[connection signal="pressed" from="Dock/BlueButton" to="Dock" method="_on_blue_button_pressed"]
[connection signal="pressed" from="Dock/GreenButton" to="Dock" method="_on_green_button_pressed"]
[connection signal="pressed" from="Dock/WhiteButton" to="Dock" method="_on_white_button_pressed"]
